# youtube-automation

./: CLAUDE.md
.claude/agents/: content-pipeline.md
.github/workflows/: bootstrap.yml  ci.yml  daily.yml
code/signals-scraper/: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  STAGE.md  channels_final.py  notion_api_guide.md  pyproject.toml  validate_channels.py
code/signals-scraper/.github/workflows/: bootstrap.yml  ci.yml  daily.yml
code/signals-scraper/config/: reddit_subs.yml  rss_feeds.yml  seed_keywords.yml  x_accounts.yml
code/signals-scraper/data/: handoff.json  handoff_yt.json  intel.db  signals.json  signals_example.json
code/signals-scraper/docs/: NOTION-DB-CREATION-PROMPT.md  REDESIGN-notion-v2.md
code/signals-scraper/prompts/: placeholder.md
code/signals-scraper/scripts/: bootstrap_channels.py  run_pipeline.py
code/signals-scraper/src/content_intel/: cli.py  db.py  export.py
code/signals-scraper/src/content_intel/pipeline/: ingest.py
code/signals-scraper/src/content_intel/sources/: base.py  github_trending.py  google_trends.py  hackernews.py  huggingface.py  product_hunt.py  reddit.py  rss.py  x_apify.py  youtube.py
code/signals-scraper/tests/: test_db.py  test_reddit.py
code/signals-scraper/tests/fixtures/cassettes/: github_trending_fetch.yaml  hf_fetch.yaml  hn_fetch.yaml  product_hunt_fetch.yaml  rss_fetch.yaml
code/signals-scraper/tests/test_pipeline/: test_db_migration.py
code/signals-scraper/tests/test_sources/: test_github_trending.py  test_google_trends.py  test_hackernews.py  test_huggingface.py  test_product_hunt.py  test_reddit.py  test_rss.py  test_x_apify.py  test_youtube.py  test_yt_scan.py
code/topic-classifier/: .gitignore  CLAUDE.md  build_topic_inputs.py  prompt.md
code/topic-decider/: CLAUDE.md  STAGE.md  content-hub-manager.skill
code/topic-deep-research/: .gitignore  CLAUDE.md  HANDOFF.md  STAGE.md  pyproject.toml
code/topic-deep-research/results/2026-W25/glm-5-2/: discovered_sources.json  signals_enriched.json
code/topic-deep-research/src/deep_research/: cli.py  discovery.py  loader.py  models.py  pipeline.py  topic_discovery.py  writer.py
code/topic-deep-research/src/deep_research/enrichers/: __init__.py  base.py  hn.py  reddit.py  youtube.py
code/topic-deep-research/tests/: test_loader.py  test_topic_discovery.py
code/topic-deep-research/tests/fixtures/: topic_input_sample.json
code/topic-deep-research/tests/test_enrichers/: test_hn.py  test_reddit.py  test_youtube.py
(+3 files in other folders)
