[project]
name = "content-intel"
version = "0.2.0"
description = "Daily signal scraper for AI/automation YouTube content research"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1.0",
    "google-api-python-client>=2.130,<3.0",
    "feedparser>=6.0,<7.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "pytrends>=4.9,<5.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "sqlite-utils>=3.36,<4.0",
    "pytest>=8.0,<9.0",
    "vcrpy>=6.0,<7.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
content-intel = "content_intel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_intel"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["validate_channels.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "feedparser.*", "pytrends.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
