[project]
name = "deep-research"
version = "0.1.0"
description = "Deep scraper: enriches classified topic signals with full content and discovers new sources"
requires-python = ">=3.12"
dependencies = [
    "youtube-transcript-api>=0.6,<1.0",
    "trafilatura>=1.12,<2.0",
    "tavily-python>=0.3,<1.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pytest>=8.0,<9.0",
    "vcrpy>=6.0,<7.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
deep-research = "deep_research.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["trafilatura.*", "youtube_transcript_api.*", "tavily.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
